added worship time and day in guest info slip
