# wc-guest-management.api/swagger.json
@@ -202,6 +202,16 @@
 				"visitDate": {
 					"type": "string"
 				},
+				"worshipTime": {
+					"type": "string",
+					"enum": [
+						"AM",
+						"NN",
+						"PM",
+						"NA"
+					],
+					"x-nullable": true
+				},
 				"tableNumber": {
 					"type": "number",
 					"format": "double",
